fix: text alignment

--- a/src/components/About Us/about.scss
+++ b/src/components/About Us/about.scss
@@ -103,13 +103,13 @@
   }
   h1{
     font-size:40px;
-    margin: 20px 0px 40px 90px;
+    margin:20px 0px 40px 30px;
   }
   p{
     width: 90%;
     font-size: 25px;
     line-height: 53px;
-    margin: 0px 0px 0px 30px;
+    margin: 0px 0px 0px 50px;
   }
 }
 
